Update lang files

--- a/lang/German.ini
+++ b/lang/German.ini
@@ -338,7 +338,7 @@ MASTER_VOLUME = "Hauptlautstärke"
 MUSIC_VOLUME = "Musik Lautstärke"
 SFX_VOLUME = "Geräusch Lautstärke"
 ENV_VOLUME = "Env Lautstärke"
-FADEOUT = "Entfernte Geräusche Ausblenden"
+FADEOUT = "Geräusche von der Ferne ausblenden"
 
 [LANGUAGE]
 LANGUAGE = "SPRACHE"
