--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -338,7 +338,7 @@ MASTER_VOLUME = "Volumen General"
 MUSIC_VOLUME = "Volumen de Música"
 SFX_VOLUME = "Volumen de Efectos de Sonido"
 ENV_VOLUME = "Volumen de Entorno"
-FADEOUT = "Desvanecimiento de sonidos distantes"
+FADEOUT = "Desvanecer Sonidos Lejanos"
 
 [LANGUAGE]
 LANGUAGE = "IDIOMA"
