--- a/lang/Dutch.ini
+++ b/lang/Dutch.ini
@@ -336,7 +336,7 @@ MASTER_VOLUME = "Meester Geluid"
 MUSIC_VOLUME = "Muziek Geluid"
 SFX_VOLUME = "Sfx Geluid"
 ENV_VOLUME = "Env Geluid"
-FADEOUT = "Fade-out verre geluiden"
+FADEOUT = "Vervaagd Geluid in de Verte"
 
 [LANGUAGE]
 LANGUAGE = "TAAL"
