--- a/lang/French.ini
+++ b/lang/French.ini
@@ -338,7 +338,7 @@ MASTER_VOLUME = "Volume principal"
 MUSIC_VOLUME = "Volume de la musique"
 SFX_VOLUME = "Volume des effets sonores"
 ENV_VOLUME = "Volume de l'environnement"
-FADEOUT = "Fondu des sons distants"
+FADEOUT = "Disparition des sons distants"
 
 [LANGUAGE]
 LANGUAGE = "LANGUE"
