--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -1,24 +1,24 @@
 [NOTIF]
-CONNECTED = "@ conectado"
-DISCONNECTED = "@ desconectado"
+CONNECTED = "@ conectou-se"
+DISCONNECTED = "@ desconectou-se"
 LEFT_THIS_LEVEL = "@ saiu do nivel"
 ENTERED_THIS_LEVEL = "@ entrou neste nivel"
-ENTERED = "@ entered\n#"
-SERVER_CLOSED = "\\#ffa0a0\\Disconectado:\\#dcdcdc\\ server fechado"
-DISCORD_ERROR = "Discord deu um erro.\n para consertar, try: \n1. Feche o jogo.\n2. Reinicie o Discord.\n3. e inicie o jogo."
-DISCORD_DETECT = "\\#ffa0a0\\Error:\\#c8c8c8\\ Discord não detectado.\n\\#a0a0a0\\tente reabrir o jogo, reiniciae o Discord, e abra o jogo denovo."
-DISCONNECT_FULL = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ o jogo esta cheio."
-DISCONNECT_KICK = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ O host te expulso."
-DISCONNECT_BAN = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ o host te baniu."
-DISCONNECT_REJOIN = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ reentrando..."
-DISCONNECT_CLOSED = "\\#ffa0a0\\Disconnected:\\#c8c8c8\\ O host fechou a conexão ."
-DISCONNECT_BIG_MOD = "o server tem um mod muito grande.\nQuitting."
+ENTERED = "@ entrou\n#"
+SERVER_CLOSED = "\\#ffa0a0\\Desconectado:\\#dcdcdc\\ server fechado"
+DISCORD_ERROR = "Discord deu um erro.\n para consertar, tente: \n1. Fechar o jogo.\n2. Reiniciar o Discord.\n3. e inicie o jogo."
+DISCORD_DETECT = "\\#ffa0a0\\Erro:\\#c8c8c8\\ Discord não detectado.\n\\#a0a0a0\\tente reabrir o jogo, reiniciar o Discord, e abra o jogo denovo."
+DISCONNECT_FULL = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ O jogo está cheio."
+DISCONNECT_KICK = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ O host te expulsou."
+DISCONNECT_BAN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ O host te baniu."
+DISCONNECT_REJOIN = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ Reconectando.."
+DISCONNECT_CLOSED = "\\#ffa0a0\\Desconectado:\\#c8c8c8\\ O host fechou a conexão."
+DISCONNECT_BIG_MOD = "O servidor tem um mod muito grande.\nSaindo."
 DIED = "@ morreu"
 DEBUG_FLY = "@ entrou no estado de debug para voar"
 IMPORT_MOD_SUCCESS = "\\#c8c8c8\\'@'\n\\#a0ffa0\\Mod Importado"
-IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Pacote DynOS\n\\#c8c8c8\\'@'\\#a0ffa0\\\nImportado"
-IMPORT_FAIL = "\\#ffa0a0\\Falha em Importar\n\\#c8c8c8\\'@'"
-IMPORT_FAIL_INGAME = "\\#ffa0a0\\Falha no Importe durante o jogo"
+IMPORT_DYNOS_SUCCESS = "\\#a0ffa0\\Pacote DynOS\n\\#c8c8c8\\'@'\\#a0ffa0\\\nimportado"
+IMPORT_FAIL = "\\#ffa0a0\\Falha ao Importar\n\\#c8c8c8\\'@'"
+IMPORT_FAIL_INGAME = "\\#ffa0a0\\Falha ao importar durante o jogo"
 COOPNET_CONNECTION_FAILED = "\\#ffa0a0\\Não foi possível se conectar ao CoopNet!"
 COOPNET_DISCONNECTED = "\\#ffa0a0\\A conexão ao CoopNet foi perdida!"
 LOBBY_NOT_FOUND = "\\#ffa0a0\\Essa partida não está mais ativa!"
@@ -34,25 +34,25 @@ LOBBY_HOST = "o host da partida"
 KICKING = "Expulso '@'!" 
 BANNING = "Banindo '@'!"
 SERVER_ONLY = "Apenas o servidor pode usar este comando."
-PERM_BANNING = "Banido Permanente '@'!"
-ADD_MODERATOR = "Adicionado '@' como Moderador!"
+PERM_BANNING = "'@' permanentemente banido!"
+ADD_MODERATOR = "'@' tornou-se moderador!"
 PLAYERS = "Jogadores"
-NO_PERMS = "Você não tem permissao de utilizar este comando."
+NO_PERMS = "Você não tem permissão de utilizar este comando."
 PLAYER_NOT_FOUND = "Não foi possivel achar este Jogador."
 SELF_KICK = "Você não pode se expulsar."
 SELF_BAN = "Você não pode se banir, inteligente."
-SELF_MOD = "Você não pode ganhar moderador de si mesmo."
-KICK_CONFIRM = "Você tem certeza que deseja Expulsar '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' para expulsar."
-BAN_CONFIRM = "Você tem certeza que deseja Banir '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' para banir."
-PERM_BAN_CONFIRM = "Você tem certeza que deseja banir ele Permanente '@'?\nType '\\#a0ffa0\\/confirm\\#fff982\\' to ban."
-MOD_CONFIRM = "Você tem certeza de que quer promover '@' a moderador?\nType '\\#a0ffa0\\/confirm\\#fff982\\'."
-PLAYERS_DESC = "/players - Lista de todos os Jogadores e seus IDs"
-KICK_DESC = "/kick [NAME|ID] - Expulse esse jogador desta Partida"
-BAN_DESC = "/ban [NAME|ID] - Banir este jogador desta Partida"
-PERM_BAN_DESC = "/permban [NAME|ID] - Banir este jogador de todas as partidas que você abrir"
-MOD_DESC = "/moderator [NAME|ID] - Fazer este jogador conseguir mandar alguns Comandos como /kick, /ban, /permban em qualquer partida que voce criar"
-UNRECOGNIZED = "comando de chat desconhecido."
-MOD_GRANTED = "\\#fff982\\você agora é um moderador."
+SELF_MOD = "Você não pode colocar si mesmo como um moderador."
+KICK_CONFIRM = "Você tem certeza que deseja expulsar '@'?\nEscreva '\\#a0ffa0\\/confirm\\#fff982\\' para expulsa-lo."
+BAN_CONFIRM = "Você tem certeza que deseja banir '@'?\nEscreva '\\#a0ffa0\\/confirm\\#fff982\\' para bani-lo."
+PERM_BAN_CONFIRM = "Você tem certeza que deseja banir '@' permanentemente?\nEscreva '\\#a0ffa0\\/confirm\\#fff982\\' para bani-lo."
+MOD_CONFIRM = "Você tem certeza de que quer promover '@' a moderador?\nEscreva '\\#a0ffa0\\/confirm\\#fff982\\'."
+PLAYERS_DESC = "/players - Lista de todos os jogadores e seus IDs"
+KICK_DESC = "/kick [NOME|ID] - Expulse este jogador de sua partida"
+BAN_DESC = "/ban [NOME|ID] - Banir este jogador de sua partida"
+PERM_BAN_DESC = "/permban [NOME|ID] - Banir este jogador de todas as partidas que você abrir"
+MOD_DESC = "/moderator [NOME|ID] - Fazer este jogador conseguir utilizar comandos como /kick, /ban, /permban em qualquer partida que voce hostear"
+UNRECOGNIZED = "Comando de chat desconhecido."
+MOD_GRANTED = "\\#fff982\\Você agora é um moderador."
 
 [MENU]
 BACK = "Voltar"
@@ -64,11 +64,11 @@ YES = "Sim"
 CAMERA = "CÂMERA"
 FREE_CAMERA = "Câmera Livre"
 ANALOG_CAMERA = "Câmera Analógica"
-MOUSE_LOOK = "Mouse Look"
+MOUSE_LOOK = "Olhar com mouse"
 INVERT_X = "Inverter X"
 INVERT_Y = "inverter Y"
-X_SENSITIVITY = "X Sensibilidade"
-Y_SENSITIVITY = "Y Sensibilidade"
+X_SENSITIVITY = "Sensibilidade X"
+Y_SENSITIVITY = "Sensibilidade Y"
 AGGRESSION = "Agressão"
 PAN_LEVEL = "Nível Pan"
 DECELERATION = "Desaceleração"
@@ -121,15 +121,15 @@ C_RIGHT = "C RIGHT"
 [DISPLAY]
 DISPLAY = "VÍDEO"
 FULLSCREEN = "Tela Cheia"
-FORCE_4BY3 = "Força 4:3"
+FORCE_4BY3 = "Forçar 4:3"
 PRELOAD_TEXTURES = "Texturas Precarregadas"
 VSYNC = "VSync"
-UNCAPPED_FRAMERATE = "Taxa de Quadros Limitado"
+UNCAPPED_FRAMERATE = "Taxa de Quadros Ilimitado"
 FRAME_LIMIT = "Limite de FPS"
 FAST = "Rápido"
 ACCURATE = "Preciso"
 INTERPOLATION = "Interpolação"
-NEAREST = "Mais Próximo"
+NEAREST = "Nearest"
 LINEAR = "Linear"
 TRIPOINT = "Tripoint"
 FILTERING = "Filtro"
@@ -139,7 +139,7 @@ D1P5X = "1.5x"
 D3X = "3x"
 D10X = "10x"
 D100X = "100x"
-DRAW_DISTANCE = "Draw Distance"
+DRAW_DISTANCE = "Distância de Renderização"
 DYNOS_PACKS = "DynOS Packs"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Desligado"
@@ -150,9 +150,9 @@ DYNOS = "DYNOS"
  
 [HOST_MESSAGE]
 INFO_TITLE = "INFO"
-WARN_DISCORD = "Convide amigos clicando com o botão direito do mouse no nome deles no Discord e clicando em\n'\\#d0d0ff\\convidar para o jogo\\#c8c8c8\\'.\n\n Você também pode convidar canais de servidores clicando em  \\#d0d0ff\\plus\\#c8c8c8\\ botão ao lado do local onde você entra no chat.\n\nGame Activity \\#ffa0a0\\precisa estar\\#c8c8c8\\ ativado nas suas\n configurações do discord.\n\n aparecendo offline \\#ffa0a0\\vai prevenir\\#c8c8c8\\ convites de serem enviados."
-WARN_DISCORD2 = "\\#ffa0a0\\Error:\\#c8c8c8\\ discord não detectado.\n\n\\#a0a0a0\\tente fechar o jogo,\nrestarting Discord,\nand abre o jogo novamente."
-WARN_SOCKET = "Direct connections \\#ffa0a0\\precisa de você\\#c8c8c8\\ para configurar o encaminhamento de porta em seu roteador.\n\nForward port '\\#d0d0ff\\%d\\#c8c8c8\\' for UDP."
+WARN_DISCORD = "Convide amigos clicando com o botão direito do mouse no nome deles no Discord e clicando em\n'\\#d0d0ff\\convidar para o jogo\\#c8c8c8\\'.\n\n Você também pode convidar canais de servidores clicando em  \\#d0d0ff\\mais\\#c8c8c8\\ botão ao lado do local onde você entra no chat.\n\nGame Activity \\#ffa0a0\\precisa estar\\#c8c8c8\\ ativado nas suas\n configurações do discord.\n\n status offline\\#ffa0a0\\vai prevenir\\#c8c8c8\\ convites de serem enviados."
+WARN_DISCORD2 = "\\#ffa0a0\\Error:\\#c8c8c8\\ discord não detectado.\n\n\\#a0a0a0\\tente fechar o jogo,\nreiniciar o Discord,\n e abra o jogo novamente."
+WARN_SOCKET = "conexão direta \\#ffa0a0\\precisa de você\\#c8c8c8\\ para configurar o encaminhamento de porta em seu roteador.\n\nForward port '\\#d0d0ff\\%d\\#c8c8c8\\' for UDP."
 HOST = "Hostear"
 
 [HOST_MODS]
@@ -163,7 +163,7 @@ MODS = "MODS"
 SAVE_TITLE = "SALVAR"
 ERASE_TITLE = "EXCLUIR"
 CONFIRM = "Você tem total certeza que deseja apagar o seu progresso atual deste slot?"
-ERASE = "excluir"
+ERASE = "Excluir"
 
 [HOST_SETTINGS]
 SETTINGS = "CONFIGURAÇÕES"
@@ -180,7 +180,7 @@ STAY_IN_LEVEL = "Ficar no Nível"
 NONSTOP = "Sem-parar"
 ON_STAR_COLLECTION = "Na Coleção de Estrelas"
 SKIP_INTRO_CUTSCENE = "Pular cutscene inicial"
-SHARE_LIVES = "Dividar vidas"
+SHARE_LIVES = "Dividir vidas"
 ENABLE_CHEATS = "Ativar cheats"
 BUBBLE_ON_DEATH = "Bolha após a morte"
 AMOUNT_OF_PLAYERS = "Quantidade de jogadores"
@@ -207,7 +207,7 @@ JOINING = "ENTRANDO"
 [JOIN]
 JOIN_TITLE = "ENTRAR"
 JOIN_DISCORD = "Para entrar em um lobby do \\#d0d0ff\\Discord\\#c8c8c8\\:\n\nMantenha o jogo aberto e clique no botão entrar no convite.\n\nSe o convite disser que o jogo acabou, clique no nome da pessoa que enviou o convite para recarregá-lo."
-JOIN_SOCKET = "Enter \\#d0d0ff\\direct connection\\#c8c8c8\\ IP and port:"
+JOIN_SOCKET = "Digitar \\#d0d0ff\\IP e porta\\#c8c8c8\\ da conexão direta:"
 JOIN = "Entrar"
 PUBLIC_LOBBIES = "Partidas Públicas"
 PRIVATE_LOBBIES = "Partidas Privadas"
@@ -338,7 +338,7 @@ MASTER_VOLUME = "Volume Geral"
 MUSIC_VOLUME = "Volume da Música"
 SFX_VOLUME = "Volume dos Efeitos"
 ENV_VOLUME = "Volume Ambiente"
-FADEOUT = "Desaparecimento do som com a distância"
+FADEOUT = "Desvanecer Sons Distantes"
 
 [LANGUAGE]
 LANGUAGE = "IDIOMA"
@@ -350,4 +350,4 @@ REFRESH = "Recarregar"
 REFRESHING = "Recarregando..."
 ENTER_PASSWORD = "Coloque a senha para a partida privada:"
 SEARCH = "Pesquisar"
-NONE_FOUND = "Nenhuma partida encontrada."
+NONE_FOUND = "Nenhuma partida foi encontrada."
