--- a/lang/Russian.ini
+++ b/lang/Russian.ini
@@ -337,7 +337,7 @@ MASTER_VOLUME = "Общая громкость"
 MUSIC_VOLUME = "Громкость музыки"
 SFX_VOLUME = "Громкость звуков"
 ENV_VOLUME = "Объёмное звучание"
-FADEOUT = "Затухание далеких звуков"
+FADEOUT = "Затухание звуков на расстоянии"
 
 [LANGUAGE]
 LANGUAGE = "LANGUAGE"
