Playerlist Improvements and Username Character Limit Increase (#476)
* xLuigiGamerxsDevFork

* xLuigiGamerxsDevFork

* Fixed Accidentally used older character.c file

* Modified the playerlist so that it can support more than 16 players if it is to be added and increased the username character limit from 20 to 60 so people with longer names can use hex codes

* Changed the Makefile back

* Just Fixing up the makefile which for some reason changed

* Fr this time I hopefully fixed the Makefile

* Bruh why did this even change it's fucking annoying

* Modified the playerlist so that it can support more than 16 players if it is to be added and increased the username character limit from 20 to 60 so people with longer names can use hex codes (Removed Whitespace lol)

* Modified the playerlist so that it can support more than 16 players if it is to be added and increased the username character limit from 20 to 60 so people with longer names can use hex codes (Removed Whitespace V2 lol)

* Used MAX_PLAYER_STRING instead of a number

* Apparently math.h wasn't needed

* Me when I use google translate only for it to fuck up french:

* Used MAX_PLAYER_STRING and removed ceils and removed multiplicaion by sPlayerListSize

* Added comment for p variable

* Removed 16

* Update djui_panel_playerlist.c

---------

Co-authored-by: xLuigiGamerx <mohammmedsadawi666@gmail.com>
Co-authored-by: PeachyPeach <72323920+PeachyPeachSM64@users.noreply.github.com>

--- a/lang/Czech.ini
+++ b/lang/Czech.ini
@@ -102,6 +102,8 @@ D_LEFT = "D-Pad vlevo"
 D_RIGHT = "D-Pad vpravo"
 X = "X"
 Y = "Y"
+PREV = "Před Stránka"
+NEXT = "Další Strana"
 
 UP = "Nahoru"
 DOWN = "Dolů"
