--- a/lang/Dutch.ini
+++ b/lang/Dutch.ini
@@ -101,6 +101,8 @@ D_LEFT = "D Links"
 D_RIGHT = "D Rechts"
 X = "X"
 Y = "Y"
+PREV = "Vori Bladzijde"
+NEXT = "Volg Bladzijde"
 
 UP = "Omhoog"
 DOWN = "Naar Beneden"
