--- a/lang/German.ini
+++ b/lang/German.ini
@@ -102,6 +102,8 @@ D_LEFT = "D Links"
 D_RIGHT = "D Rechts"
 X = "X"
 Y = "Y"
+PREV = "Vorh Seite"
+NEXT = "Näch Seite"
 
 UP = "Hoch"
 DOWN = "Unten"
