--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -100,6 +100,8 @@ D_LEFT = "D Sinistra"
 D_RIGHT = "D Destra"
 X = "X"
 Y = "Y"
+PREV = "Pagina Prec"
+NEXT = "Pagina Succ"
 
 UP = "Su"
 DOWN = "Giù"
