--- a/lang/Russian.ini
+++ b/lang/Russian.ini
@@ -101,6 +101,8 @@ D_LEFT = "Крестовина влево"
 D_RIGHT = "Крестовина вправо"
 X = "X"
 Y = "Y"
+PREV = "Пред Cтраница"
+NEXT = "След Cтраница"
 
 UP = "Вверх"
 DOWN = "Вниз"
