--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -102,6 +102,8 @@ D_LEFT = "Cruz Izquierda"
 D_RIGHT = "Cruz Derecha"
 X = "X"
 Y = "Y"
+PREV = "Pagina Ante"
+NEXT = "Sigu Página"
 
 UP = "Arriba"
 DOWN = "Abajo"
