--- a/lang/Czech.ini
+++ b/lang/Czech.ini
@@ -102,6 +102,7 @@ D_LEFT = "D-Pad vlevo"
 D_RIGHT = "D-Pad vpravo"
 X = "X"
 Y = "Y"
+CONSOLE = "Řídicí panel"
 PREV = "Před Stránka"
 NEXT = "Další Strana"
 
@@ -244,6 +245,9 @@ DISABLE_POPUPS = "Vypnout vyskakovací okna"
 MENU_OPTIONS = "Nastavení hlavního menu"
 DEBUG = "Debug"
 LANGUAGE = "Jazyk"
+
+[CONSOLE]
+CONSOLE = "ŘÍDICÍ PANEL"
 
 [MODLIST]
 MODS = "MODY"
