--- a/lang/Dutch.ini
+++ b/lang/Dutch.ini
@@ -101,6 +101,7 @@ D_LEFT = "D Links"
 D_RIGHT = "D Rechts"
 X = "X"
 Y = "Y"
+CONSOLE = "Logboek"
 PREV = "Vori Bladzijde"
 NEXT = "Volg Bladzijde"
 
@@ -243,6 +244,9 @@ DISABLE_POPUPS = "Popups uitzetten"
 MENU_OPTIONS = "Menu Instellingen"
 DEBUG = "Debug"
 LANGUAGE = "Taal"
+
+[CONSOLE]
+CONSOLE = "LOGBOEK"
 
 [MODLIST]
 MODS = "MODS"
