--- a/lang/French.ini
+++ b/lang/French.ini
@@ -102,6 +102,7 @@ D_LEFT = "D Gauche"
 D_RIGHT = "D Droite"
 X = "X"
 Y = "Y"
+CONSOLE = "Console"
 PREV = "Page Préc"
 NEXT = "Page Suiv"
 
@@ -244,6 +245,9 @@ DISABLE_POPUPS = "Désactiver les Pop-ups"
 MENU_OPTIONS = "Options du menu"
 DEBUG = "Débogage"
 LANGUAGE = "Langue"
+
+[CONSOLE]
+CONSOLE = "CONSOLE"
 
 [MODLIST]
 MODS = "MODS"
