--- a/lang/German.ini
+++ b/lang/German.ini
@@ -102,6 +102,7 @@ D_LEFT = "D Links"
 D_RIGHT = "D Rechts"
 X = "X"
 Y = "Y"
+CONSOLE = "Konsole"
 PREV = "Vorh Seite"
 NEXT = "Näch Seite"
 
@@ -244,6 +245,9 @@ DISABLE_POPUPS = "Popups Deaktivieren"
 MENU_OPTIONS = "Menü Optionen"
 DEBUG = "Debug"
 LANGUAGE = "Sprache"
+
+[CONSOLE]
+CONSOLE = "KONSOLE"
 
 [MODLIST]
 MODS = "MODIFIKATIONEN"
