--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -100,6 +100,7 @@ D_LEFT = "D Sinistra"
 D_RIGHT = "D Destra"
 X = "X"
 Y = "Y"
+CONSOLE = "Consolle"
 PREV = "Pagina Prec"
 NEXT = "Pagina Succ"
 
@@ -241,6 +242,9 @@ DISABLE_POPUPS = "Disabilita Popups"
 MENU_OPTIONS = "Opzioni Menù"
 DEBUG = "Debug"
 LANGUAGE = "Lingua"
+
+[CONSOLE]
+CONSOLE = "CONSOLE"
 
 [MODLIST]
 MODS = "MODS"
