--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -102,6 +102,7 @@ D_LEFT = "D LEFT"
 D_RIGHT = "D RIGHT"
 X = "X"
 Y = "Y"
+CONSOLE = "Console"
 PREV = "Página Ante"
 NEXT = "Próx Página"
 
@@ -244,6 +245,9 @@ DISABLE_POPUPS = "Desativar Popups"
 MENU_OPTIONS = "Opções de Menu"
 DEBUG = "Debug"
 LANGUAGE = "Idioma"
+
+[CONSOLE]
+CONSOLE = "CONSOLE"
 
 [MODLIST]
 MODS = "MODS"
