--- a/lang/Russian.ini
+++ b/lang/Russian.ini
@@ -101,6 +101,7 @@ D_LEFT = "Крестовина влево"
 D_RIGHT = "Крестовина вправо"
 X = "X"
 Y = "Y"
+CONSOLE = "пульт"
 PREV = "Пред Cтраница"
 NEXT = "След Cтраница"
 
@@ -243,6 +244,9 @@ DISABLE_POPUPS = "Отключить всплывающие окна"
 MENU_OPTIONS = "Параметры меню"
 DEBUG = "Отладка"
 LANGUAGE = "Язык"
+
+[CONSOLE]
+CONSOLE = "пульт"
 
 [MODLIST]
 MODS = "MODS"
