--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -102,6 +102,7 @@ D_LEFT = "Cruz Izquierda"
 D_RIGHT = "Cruz Derecha"
 X = "X"
 Y = "Y"
+CONSOLE = "Consola"
 PREV = "Pagina Ante"
 NEXT = "Sigu Página"
 
@@ -244,6 +245,9 @@ DISABLE_POPUPS = "Deshabilitar mensajes emergentes"
 MENU_OPTIONS = "Opciones del menú"
 DEBUG = "Depuración"
 LANGUAGE = "Idioma"
+
+[CONSOLE]
+CONSOLE = "CONSOLA"
 
 [MODLIST]
 MODS = "MODS"
