--- a/lang/English.ini
+++ b/lang/English.ini
@@ -102,6 +102,7 @@ D_LEFT = "D Left"
 D_RIGHT = "D Right"
 X = "X"
 Y = "Y"
+CONSOLE = "Console"
 PREV = "Prev Page"
 NEXT = "Next Page"
 
@@ -244,6 +245,9 @@ DISABLE_POPUPS = "Disable Popups"
 MENU_OPTIONS = "Menu Options"
 DEBUG = "Debug"
 LANGUAGE = "Language"
+
+[CONSOLE]
+CONSOLE = "CONSOLE"
 
 [MODLIST]
 MODS = "MODS"
