--- a/lang/German.ini
+++ b/lang/German.ini
@@ -357,3 +357,6 @@ REFRESHING = "Wird Aktualisiert..."
 ENTER_PASSWORD = "Gib das Passwort für das Lobby ein:"
 SEARCH = "Suchen"
 NONE_FOUND = "Es wurden keine Lobbys gefunden."
+
+[LOADING_SCREEN]
+LOADING = "Wird geladen"
