--- a/lang/Czech.ini
+++ b/lang/Czech.ini
@@ -357,3 +357,6 @@ REFRESHING = "Obnovování..."
 ENTER_PASSWORD = "Zadejte heslo soukromé hry:"
 SEARCH = "Hledat"
 NONE_FOUND = "Nebyly nalezeny žádné hry."
+
+[LOADING_SCREEN]
+LOADING = "Načítání"
