--- a/lang/French.ini
+++ b/lang/French.ini
@@ -358,3 +358,5 @@ ENTER_PASSWORD = "Entrez le mot de passe de la partie:"
 SEARCH = "Rechercher"
 NONE_FOUND = "Aucune partie n'a été trouvée."
 
+[LOADING_SCREEN]
+LOADING = "Chargement"
