--- a/lang/Russian.ini
+++ b/lang/Russian.ini
@@ -356,3 +356,6 @@ REFRESHING = "Обновление..."
 ENTER_PASSWORD = "Введите пароль закрытой группы:"
 SEARCH = "Поиск"
 NONE_FOUND = "Группы не найдены."
+
+[LOADING_SCREEN]
+LOADING = "Загрузка"
