simple fps display in top left corner (#527)
* simple fps display in top left corner

* added other languages

thank you to everyone in #translation-station, and to Google translate (some languages may need revisiting later)

* render from left not center, grey fps text

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -147,6 +147,7 @@ DYNOS_PACKS = "DynOS Packs"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Off"
 MUST_RESTART = "Restart the game to apply some changes."
+SHOW_FPS = "Show FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -357,6 +358,3 @@ REFRESHING = "Refreshing..."
 ENTER_PASSWORD = "Enter the private lobby's password:"
 SEARCH = "Search"
 NONE_FOUND = "No lobbies were found."
-
-[LOADING_SCREEN]
-LOADING = "Loading"
