--- a/lang/German.ini
+++ b/lang/German.ini
@@ -147,6 +147,7 @@ DYNOS_PACKS = "DynOS-Pakete"
 ANTIALIASING = "Kantenglättung"
 OFF = "Aus"
 MUST_RESTART = "Um einige Änderungen zu übernehmen, muss das Spiel neugestartet werden."
+SHOW_FPS = "FPS anzeigen"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -357,6 +358,3 @@ REFRESHING = "Aktualisiere..."
 ENTER_PASSWORD = "Gib das Passwort für die Lobby ein:"
 SEARCH = "Suchen"
 NONE_FOUND = "Keine Lobbys gefunden."
-
-[LOADING_SCREEN]
-LOADING = "Wird geladen"
