--- a/lang/Italian.ini
+++ b/lang/Italian.ini
@@ -145,6 +145,7 @@ DYNOS_PACKS = "Pacchetti DynOS"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Off"
 MUST_RESTART = "You must restart the game for some changes to take effect."
+SHOW_FPS = "Mostra FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -354,6 +355,3 @@ REFRESHING = "Refreshing..."
 ENTER_PASSWORD = "Enter the private lobby's password:"
 SEARCH = "Search"
 NONE_FOUND = "No lobbies were found."
-
-[LOADING_SCREEN]
-LOADING = "Caricamento"
