--- a/lang/Polish.ini
+++ b/lang/Polish.ini
@@ -144,6 +144,7 @@ DYNOS_PACKS = "Paczki DynOS"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Wylaczone"
 MUST_RESTART = "Musisz zrestartowac gre, aby zmiany zaczely obowiazywac."
+SHOW_FPS = "Pokaż FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
