--- a/lang/Portuguese.ini
+++ b/lang/Portuguese.ini
@@ -147,10 +147,11 @@ DYNOS_PACKS = "DynOS Packs"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Desligado"
 MUST_RESTART = "Você precisará reiniciar o jogo para algumas alterações serem aplicadas."
+SHOW_FPS = "Mostrar FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
- 
+
 [HOST_MESSAGE]
 INFO_TITLE = "INFO"
 WARN_DISCORD = "Convide amigos clicando com o botão direito do mouse no nome deles no Discord e clicando em\n'\\#d0d0ff\\convidar para o jogo\\#c8c8c8\\'.\n\n Você também pode convidar canais de servidores clicando em  \\#d0d0ff\\mais\\#c8c8c8\\ botão ao lado do local onde você entra no chat.\n\nGame Activity \\#ffa0a0\\precisa estar\\#c8c8c8\\ ativado nas suas\n configurações do discord.\n\n status offline\\#ffa0a0\\vai prevenir\\#c8c8c8\\ convites de serem enviados."
@@ -357,6 +358,3 @@ REFRESHING = "Recarregando..."
 ENTER_PASSWORD = "Coloque a senha para a partida privada:"
 SEARCH = "Pesquisar"
 NONE_FOUND = "Nenhuma partida foi encontrada."
-
-[LOADING_SCREEN]
-LOADING = "Carregando"
