--- a/lang/Russian.ini
+++ b/lang/Russian.ini
@@ -146,6 +146,7 @@ DYNOS_PACKS = "Пакеты DynOS"
 ANTIALIASING = "Анизотропная фильтрация"
 OFF = "Выкл"
 MUST_RESTART = "Перезапустите игру, чтобы изменения вступили в силу"
+SHOW_FPS = "Показывать FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -356,6 +357,3 @@ REFRESHING = "Обновление..."
 ENTER_PASSWORD = "Введите пароль закрытой группы:"
 SEARCH = "Поиск"
 NONE_FOUND = "Группы не найдены."
-
-[LOADING_SCREEN]
-LOADING = "Загрузка"
