--- a/lang/Spanish.ini
+++ b/lang/Spanish.ini
@@ -147,6 +147,7 @@ DYNOS_PACKS = "Packs de DynOS"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Desactivado"
 MUST_RESTART = "Tienes que reiniciar el juego para que algunos cambios surtan efecto."
+SHOW_FPS = "Mostrar FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
