--- a/lang/Czech.ini
+++ b/lang/Czech.ini
@@ -147,6 +147,7 @@ DYNOS_PACKS = "DynOS packy"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Vypnuto"
 MUST_RESTART = "Musíte restartovat hru pro aplikování změn."
+SHOW_FPS = "Zobrazit FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -357,6 +358,3 @@ REFRESHING = "Obnovování..."
 ENTER_PASSWORD = "Zadejte heslo soukromé hry:"
 SEARCH = "Hledat"
 NONE_FOUND = "Nebyly nalezeny žádné hry."
-
-[LOADING_SCREEN]
-LOADING = "Načítání"
