--- a/lang/Dutch.ini
+++ b/lang/Dutch.ini
@@ -146,6 +146,7 @@ DYNOS_PACKS = "DynOS Packs"
 ANTIALIASING = "Anti-aliasing"
 OFF = "UIT"
 MUST_RESTART = "Je moet de game opnieuw opstarten voor sommige veranderingen om effect te hebben."
+SHOW_FPS = "Toon FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -355,6 +356,3 @@ REFRESHING = "herladen..."
 ENTER_PASSWORD = "Typ het wachtwoord van de privé lobby:"
 SEARCH = "Zoek"
 NONE_FOUND = "Er zijn geen lobby's gevonden."
-
-[LOADING_SCREEN]
-LOADING = "Bezig met laden"
