--- a/lang/French.ini
+++ b/lang/French.ini
@@ -147,6 +147,7 @@ DYNOS_PACKS = "Packs DynOS"
 ANTIALIASING = "Anti-aliasing"
 OFF = "Désactivé"
 MUST_RESTART = "Vous devez relancer le jeu pour que certains changements prennent effet."
+SHOW_FPS = "Afficher FPS"
 
 [DYNOS]
 DYNOS = "DYNOS"
@@ -357,6 +358,3 @@ REFRESHING = "Actualisation..."
 ENTER_PASSWORD = "Entrez le mot de passe de la partie:"
 SEARCH = "Rechercher"
 NONE_FOUND = "Aucune partie n'a été trouvée."
-
-[LOADING_SCREEN]
-LOADING = "Chargement"
